不要なエンドポイント削除
